# patent_board_full

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  ENVIRONMENT_SETUP.md  LANDING_PAGE.md  MCP_INTEGRATION_COMPLETE.md  PATENT_BOARD_LOGIN_SYSTEM_DOCUMENTATION.md  PROJECT_COMPLETION.md  README.md  TODO.md  agent.md  chatbot_configuration_analysis.md  check_db.py  context_engineering_analysis.md  database_setup.sql  docker-compose.prod.yml  docker-compose.yml  oh-my-opencode.json  pa_system_schema.sql  pyproject.toml  start.sh  tasks.md  test_backend.py  test_frontend_integration.js  test_langgraph_chatbot.py  test_phase2_integration.py
back_end/: AGENTS.md  create_initial_users.py  create_tables.py  drop_obsolete_tables.py  main.py  pyproject.toml  pyrightconfig.json  update_db_mcp.py  verify_endpoints.py
back_end/alembic/: env.py
back_end/alembic/versions/: 0002_add_patent_analyses_table.py  06966eaa7879_add_role_column_to_users_table.py  1771070752_add_session_groups_tables.py  20260214_add_confidence_scores_table.py  20260214_add_relevance_analyses_table.py  20260214_add_session_favorites_table.py
back_end/app/: auto_cleanup_scheduler.py  main.py  routes.py  scheduler.py
back_end/app/agents/: report_generator.py
back_end/app/api/: deps.py
back_end/app/core/: config.py  prompt_templates.py
back_end/app/crud/: __init__.py  analytics.py  audit.py  chat.py  crud_archived_session.py  crud_confidence_score.py  crud_patent_analysis.py  crud_relevance_analysis.py  crud_session_favorite.py  crud_session_group.py  llm_usage.py  mcp.py  notification.py  patent.py  patent_db.py  prompt_template.py  report.py  report_version.py  user.py  workspace.py
back_end/app/db/: redis_client.py
back_end/app/langgraph/: __init__.py  mcp_client.py
back_end/app/models/: __init__.py  archived_session.py  audit.py  confidence_score.py  patent_analysis.py  patent_db.py  relevance_analysis.py  session_favorite.py  session_group.py
back_end/app/scheduler/: auto_cleanup_scheduler.py
back_end/app/schemas/: __init__.py  analytics.py  chat.py  mcp.py  notification.py  patent.py  patent_analysis.py  report.py  tgip.py  user.py
back_end/app/scripts/: index_patents.py
back_end/app/services/: __init__.py  confidence_calculator.py  mcp_service.py  opensearch_service.py  relevance_analyzer.py
back_end/app/templates/: admin.html  analytics.html  chat.html  dashboard-modern.html  dashboard.html  index-modern.html  index.html  login.html  patents-modern.html  patents.html  reports.html
back_end/chatbot/: __init__.py  auth_main.py  main.py  simple_main.py
back_end/chatbot/backends/: __init__.py  redis_memory.py  sql_memory.py
back_end/common/: mcp_client.py
back_end/tests/: test_feature_api_contracts.py  test_feature_route_registration.py  test_mcp_endpoints.py  test_mcp_schemas.py
mcp/: AGENTS.md  __init__.py  database.py  gen_script_score_query.py  gen_test_query.py  mcp_server.py  pkg_init_backup.py  pyproject.toml  skill.md  test_knn_query.sh  test_opensearch_knn.py  test_patent_tools.py
mcp/auth/: models.py  security.py
mcp/config/: settings.py
mcp/db/: analysis_models.py  graph.py  models.py
mcp/scripts/: check_raw_data.py  deep_inspect.py  init_auth_db.py  inspect_neo4j_schema.py  inspect_patent_schema.py  inspect_schema.py  inspect_unified_index.py  output.txt  verify_system.py
mcp/services/: embedding_service.py
mcp/tests/: COMPREHENSIVE_TEST_REPORT.md  test_auth.py  test_docker_integration.py  test_graph_tools.py  test_mcp_server_improvements.py  test_minimal.py  test_new_functionality.py  test_retrieval.py  test_server_integration.py  test_structure.py
mcp/tools/: patent_identifier.py
(+368 files in other folders)
